--- a/roles/vim/templates/.vimrc.j2
+++ b/roles/vim/templates/.vimrc.j2
@@ -67,6 +67,9 @@ set expandtab
 set tabstop=4
 set shiftwidth=4
 
+" YAML config
+autocmd FileType yaml setlocal ts=2 sts=2 sw=2 expandtab
+
 " Show line numbers.
 set number
 
